--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "backend for the downtime monitor",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
   "repository": {
     "type": "git",
@@ -20,10 +24,12 @@
     "axios": "^0.24.0",
     "bree": "^7.1.0",
     "colors": "^1.4.0",
-    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "concurrently": "^6.4.0"
   }
 }
