--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
     "axios": "^0.24.0",
     "bree": "^7.1.0",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "concurrently": "^6.4.0"
