--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "helmet": "^5.1.0",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
