--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^5.1.0",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^6.1.0"
