--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "concurrently": "^6.4.0"
